--- a/renderer/public/data/en/app_i18n.json
+++ b/renderer/public/data/en/app_i18n.json
@@ -185,9 +185,11 @@
     "listed_1month": "1 Month Ago",
     "listed_2months": "2 Months Ago",
     "currency_any": "Any Currency",
+    "currency_only_alch": "Alchemy Orb",
     "currency_only_chaos": "Chaos Orb",
     "currency_only_div": "Divine Orb",
-    "currency_chaos_div": "Both Orbs"
+    "currency_chaos_div": "Both Orbs",
+    "currency_alch_chaos": "Both Orbs (R)"
   },
   "widget": {
     "title": "widget title",
